Destroy EGL surface before X11 window.

EGL can still be using the window, so we first need to destroy the
surface, then the window.

BUG=824522

Change-Id: Ifa4e51cef3f625e9fc6abedfce6336f7bf835e7c
Reviewed-on: https://chromium-review.googlesource.com/1128465
Reviewed-by: Corentin Wallez <cwallez@chromium.org>
Reviewed-by: kylechar <kylechar@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Nicolas Capens <capn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573288}